solving html edit tag bug in which the delete icon did a jump in hover state

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2896,6 +2896,12 @@ div.edit_box label{
 	border:1px solid #C1D2D3;
 	padding:2px;
 	margin-left:150px;	
+	display:none;
+}
+.delete_box_tag{
+	display:box;
+	height:10px;
+	width:100%;
 }
 .delete_div{
 	height:10px;
